--- a/client/package.json
+++ b/client/package.json
@@ -56,11 +56,11 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "latest",
-    "react": "^19",
+    "react": "^19.1.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
     "react-is": "^19.1.1",
     "react-native": "latest",
